--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-image-picker": "~16.0.6",
     "expo-insights": "~0.8.2",
     "expo-linking": "~7.0.5",
+    "expo-localization": "~16.0.1",
     "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.21",
     "expo-secure-store": "~14.0.1",
@@ -46,6 +47,7 @@
     "expo-system-ui": "~4.0.9",
     "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.2",
+    "i18n-js": "^4.5.1",
     "lucide-react-native": "^0.503.0",
     "moment": "^2.30.1",
     "react": "18.3.1",
